Projet GL/Projet_GL/src/test/deca/context/valid/increment1/print-int.deca
// Résultats : 7

// Historique :
//  cree le 09/01/2023

{
    int a = 7;
    println(a);
}