Projet GL/Projet_GL/src/test/deca/context/invalid/increment6/method-call.deca
// Test rule 3.71 call method on an Identifier that isn't a class

// Historique : cree le 18/01/2023

class A{
    int a;

    void m(){}
}

{
    int x;
    x.m();
}